Bugfix
Fixed a styling bug where the month name was cut off.

Built the course display as a grid for better positioning.

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -43,6 +43,17 @@ html, body
     > .input-field
       margin-bottom: 30px
 
+  .datepicker-controls .select-month input
+    width: 90px !important
+
+  #placeholder > .course
+    display: grid
+    width: 90%
+    grid-template-columns: auto 25% 15%
+    grid-template-rows: 15% auto
+    grid-template-areas: "title date email" "names . ."
+    align-items: center
+
 #slide-out, #fullscreen-sidebar
   display: block
   position: fixed
